--- a/css/style.css
+++ b/css/style.css
@@ -171,8 +171,33 @@ body {
 	--padding-lg: 9.6rem;
 }
 
+/* Início dos estilos de classes utilitárias
+ */
+
+.bg-black {
+	background-color: var(--gray5);
+}
+
+.flex-y-24 {
+	display: flex;
+	flex-direction: column;
+	gap: 2.4rem;
+}
+
+.overflow-auto {
+	overflow: auto !important;
+}
+
+.none {
+	display: none;
+}
+
 /* Início dos estilos globais de tipografia
  */
+
+* {
+	font-family: 'Source Sans Pro', sans-serif;
+}
 
 .title-section-h1 {
 	font-style: normal;
@@ -184,6 +209,153 @@ body {
 
 /* Fim dos estilos globais de tipografia
  */
+
+/*Início dos estilos globais de botões*/
+
+.btn {
+	font-size: 1.8rem;
+	color: #fff;
+}
+
+.btn.btn-primary {
+	background-color: var(--color-primary);
+	font-weight: 700;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1.2rem 2.4rem;
+	border-radius: 0.6rem;
+	width: 100%;
+}
+
+.btn.btn-ghost {
+	background-color: transparent;
+	font-weight: 400;
+	display: flex;
+	gap: 1rem;
+	align-items: center;
+}
+
+.btn.btn-ghost.w-icon-red .icon {
+	font-size: 2.4rem;
+	color: var(--color-primary);
+}
+
+.btn.btn-ghost.w-icon-gray .icon {
+	font-size: 1.8rem;
+	color: var(--gray0);
+}
+
+/*Fim dos estilos globais de botões*/
+
+/* Início dos estilos de inputs */
+
+.input.text {
+	display: flex;
+	padding: 1.2rem 1rem;
+	border-radius: 0.6rem;
+	background-color: var(--gray4);
+	gap: 1rem;
+	width: 100%;
+	align-items: center;
+}
+
+.input.text input {
+	font-size: 1.8rem;
+	color: #fff;
+	font-weight: 400;
+}
+
+.input.text .icon {
+	font-size: 1.8rem;
+	color: var(--gray0);
+}
+
+.input-group-radio {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	cursor: pointer;
+	padding: 1.3rem 1.6rem;
+	border-bottom: 1px solid var(--gray3);
+}
+
+.radio-button {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
+}
+
+.custom-radio {
+	height: 2rem;
+	width: 2rem;
+	border-radius: 50%;
+	background-color: var(--gray3);
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.custom-radio::after {
+	content: '';
+	position: absolute;
+	display: none;
+	width: 1.2rem;
+	height: 1.2rem;
+	border-radius: 50%;
+	background: #fff;
+	border: 4px solid var(--color-primary);
+}
+
+.radio-button:checked ~ .custom-radio::after {
+	display: block;
+}
+
+.input-number {
+	display: flex;
+	justify-content: flex-end;
+	gap: 0.8rem;
+	align-items: center;
+	background-color: transparent;
+	color: #fff;
+	width: 12.4rem;
+	height: 4.8rem;
+	border-radius: 10px;
+}
+
+.input-group-number {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	cursor: pointer;
+	padding: 1.3rem 1.6rem;
+	border-bottom: 1px solid var(--gray3);
+	height: 4.8rem;
+}
+
+.input-number__decrement,
+.input-number__increment {
+	background-color: transparent;
+	border: none;
+	color: #fff;
+	cursor: pointer;
+	font-size: 2.4rem;
+	height: 2.4rem;
+}
+
+.input-number__display {
+	color: #fff;
+	font-size: 1.8rem;
+	font-weight: 400;
+	font-style: normal;
+	text-align: center;
+	width: 30%;
+}
+
+/* Fim dos estilos de inputs */
 
 html {
 	scroll-behavior: smooth;
@@ -367,7 +539,30 @@ header {
 	color: var(--gray0);
 }
 
-/* Início dos estilos do header com botão de voltar */
+/* Fim dos estilos do header com botão de voltar */
+
+/* Início dos estilos do header com botão de voltar com título da página centralizado*/
+
+.header-main.back.only-title .right-icon {
+	display: none;
+}
+
+.header-main.back.only-title #btn-menu {
+	height: 3.2rem;
+	width: 3.2rem;
+}
+
+.header-main.back.only-title a .icon {
+	font-size: 3.2rem;
+	color: var(--gray0);
+}
+
+.header-main.back.only-title .header__title {
+	font-size: 1.6rem;
+	font-weight: 700;
+}
+
+/* Fim dos estilos do header com botão de voltar com título da página centralizado*/
 
 /* Início dos estilos do header da página de cardápio em scroll*/
 
@@ -604,6 +799,7 @@ header {
 	transition: width 0.1s ease;
 	overflow: hidden;
 	opacity: 0;
+	z-index: 9999;
 }
 
 #close-main-modal {
@@ -1178,6 +1374,209 @@ header {
 	border-radius: 0.4rem;
 }
 
-/* Início dos estilos da página de pesquisa de cardápio/menu */
+#header-img {
+	height: 26rem;
+	object-fit: cover;
+	width: 100%;
+}
 
-/* Fim dos estilos da página de pesquisa de cardápio/menu */
+#view-product {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: var(--gray4);
+	transition: all 0.2s ease;
+	overflow: hidden;
+	opacity: 0;
+	z-index: 9999;
+	transform: translateY(100vh);
+	border-radius: 1.2rem 1.2rem 0 0;
+}
+
+#close-view-product {
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	font-size: 4.8rem;
+	color: #fff;
+	cursor: pointer;
+}
+
+#view-product.active {
+	transform: translateY(0);
+	opacity: 100;
+}
+
+#view-product.active .container {
+	margin: 2.4rem 0 1.6rem;
+}
+
+#view-product.active .view-product__description .container h2 {
+	font-size: 2rem;
+	font-weight: 700;
+	margin-bottom: 1rem;
+}
+
+#view-product.active .view-product__description .container p {
+	color: var(--gray2);
+	font-size: 1.5rem;
+	font-weight: 400;
+}
+
+#view-product.active .view-product__options .container {
+	display: flex;
+	flex-direction: column;
+	gap: 2.4rem;
+}
+
+#view-product.active .view-product__options .input-group-radio {
+	font-size: 1.6rem;
+	font-weight: 400;
+	font-style: normal;
+}
+#view-product.active .view-product__options .options__header {
+	background-color: var(--gray3);
+	padding: 0 1.6rem;
+	border-radius: 0.6rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 6rem;
+}
+#view-product.active .view-product__options .options__header .header__text {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#view-product.active
+	.view-product__options
+	.options__header
+	.header__text
+	.text__title {
+	color: #fff;
+	font-size: 1.8rem;
+	font-weight: 700;
+}
+
+#view-product.active
+	.view-product__options
+	.options__header
+	.header__text
+	.text__description {
+	color: #fff;
+	font-size: 1.3rem;
+	font-weight: 400;
+}
+
+#view-product.active
+	.view-product__options
+	.options__header.optional
+	.header__text
+	.text__description,
+#view-product.active
+	.view-product__options
+	.options__header.optional
+	.header__warning {
+	display: none;
+}
+
+#view-product.active .view-product__options .options__header .header__warning {
+	color: var(--color-primary);
+	font-size: 1.4rem;
+	font-weight: 700;
+}
+
+#view-product.active .view-product__options {
+	overflow-y: auto;
+	height: calc(100vh - 376px);
+	padding-bottom: 9.6rem;
+}
+
+/* Início dos estilos da página de perfil */
+
+.wrapper.profile {
+	background: var(--gray5);
+}
+
+.s-personal-data {
+	margin-top: 1.6rem;
+	width: 100%;
+}
+
+.wrapper.profile .header-main {
+	background: var(--gray5);
+}
+
+.s-personal-data .container {
+	display: flex;
+	flex-direction: column;
+	gap: 2.4rem;
+	justify-content: center;
+	align-items: center;
+}
+
+.s-personal-data .s-personal-data__photo {
+	height: 12rem;
+	width: 12rem;
+	border-radius: 50%;
+	background: var(--gray4);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+}
+
+.s-personal-data .s-personal-data__photo .photo__container .icon {
+	font-size: 4.8rem;
+	color: var(--gray3);
+}
+
+.s-personal-data .s-personal-data__photo .photo__exclude {
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 1;
+	width: 3.6rem;
+	height: 3.6rem;
+	background-color: var(--color-primary);
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.s-personal-data .s-personal-data__photo .photo__exclude .icon {
+	font-size: 2rem;
+	color: #fff;
+}
+
+.s-personal-data .container .s-personal-data__form {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 2.4rem;
+	margin-top: 2.4;
+}
+
+.s-personal-data .container .s-personal-data__form .btn-primary {
+	margin-top: 1.6rem;
+}
+
+.s-personal-data .container .s-personal-data__form .w-icon-gray {
+	margin-top: 1.6rem;
+}
+
+/* Fim dos estilos da página de perfil */
+
+/* Início dos estilos da página de alteração de senha*/
+
+.s-password {
+	margin-top: 1.6rem;
+}
+
+.s-password .btn-primary {
+	margin-top: 1.6rem;
+}
