--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ input[type='search']::-webkit-search-cancel-button {
 	-webkit-appearance: none;
 	height: 24px;
 	width: 24px;
-	background: url('/img/ic_baseline-cancel.svg') no-repeat center center;
+	background: url(./img/ic_baseline-cancel.svg') no-repeat center center;
 }
 
 input[type='search'] {
@@ -308,6 +308,37 @@ body {
 	width: 100%;
 }
 
+.btn.btn-social {
+	font-weight: 700;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 1.2rem 2.4rem;
+	border-radius: 0.6rem;
+	width: 100%;
+}
+
+.btn.btn-social.icon {
+	font-size: 2.4rem;
+}
+
+.btn.btn-social.apple {
+	background-color: #000;
+}
+
+.btn.btn-social.facebook {
+	background-color: #39549c;
+}
+
+.btn.btn-social.google {
+	background-color: #db4a33;
+}
+
+.btn.btn-social.celular {
+	justify-content: center;
+	border: 1px solid #616161;
+}
+
 /*Fim dos estilos globais de botões*/
 
 /* Início dos estilos de tags */
@@ -479,6 +510,22 @@ input[type='checkbox']:not(:checked) + label:after {
 	align-items: center;
 }
 
+.input.text.login-phone {
+	background-color: #616161;
+	color: #fff !important;
+}
+
+.input.text.login-phone .icon {
+	color: #fff;
+	opacity: 0.5;
+	font-size: 2.4rem;
+}
+
+.input.text.login-phone input::placeholder {
+	color: #fff !important;
+	opacity: 0.5;
+}
+
 .input.text input {
 	font-size: 1.8rem;
 	color: #fff;
@@ -498,6 +545,18 @@ input[type='checkbox']:not(:checked) + label:after {
 	cursor: pointer;
 	padding: 1.3rem 1.6rem;
 	border-bottom: 1px solid var(--gray3);
+}
+
+.input-error {
+}
+
+.input-error .p-error {
+	color: #FD0D00;
+	font-size: 1.3rem;
+	font-weight: 700;
+	text-align: left;
+	position: absolute;
+	
 }
 
 .radio-button {
@@ -626,6 +685,7 @@ body {
 }
 
 .wrapper {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	max-width: 50rem;
@@ -2208,7 +2268,7 @@ header {
 	display: flex;
 	width: 100%;
 	gap: 1.6rem;
-  align-items: center;
+	align-items: center;
 }
 
 .my-adress-list__item .item__address h3 {
@@ -2452,4 +2512,69 @@ header {
 	.bold {
 		font-weight: 700 !important;
 	}
+}
+
+/* Fim dos estilos das páginas de pagamentos */
+
+/* Início dos estilos da página de login */
+
+.login .bg-up {
+	width: 100%;
+	position: absolute;
+	top: 0;
+	z-index: 0;
+}
+
+.login .bg-up img {
+	width: 100%;
+}
+
+.login .bg-down {
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	z-index: 0;
+}
+
+.login .bg-down img {
+	width: 100%;
+}
+
+.login .container {
+	z-index: 999;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 4rem;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+}
+
+.login .container p {
+	color: #fff;
+	font-size: 1.8rem;
+	font-weight: 700;
+}
+
+.login .container img {
+	max-width: 11rem;
+}
+
+.login .container .btn-group {
+	z-index: 999;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 1.6rem;
+	flex-direction: column;
+	width: 100%;
+}
+
+/* Seção de login pelo celular */
+
+.forgot {
+	text-align: right;
+	font-size: 1.4rem;
+	font-weight: 400;
 }
